added awake and start methods

--- a/traffic_sim/traffic_sim.kv
+++ b/traffic_sim/traffic_sim.kv
@@ -3,10 +3,10 @@
 <Agent>:
     size: 10, 10
     canvas:
+        Color:
+            rgba: 1, 1, 1, 1
         Ellipse:
             pos: self.pos
             size: self.size
 
 <Game>:
-    Agent:
-        pos: self.parent.center
